[project]
name = "datasette-{{ cookiecutter.hyphenated }}"{% if cookiecutter.author_name %}
version = "0.1"
description = "{{ cookiecutter.description or "" }}"
authors = [{name = "{{ cookiecutter.author_name }}"}]{% endif %}{%
license = {text = "Apache-2.0"}
classifiers = [
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "datasette"
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/datasette-{{ cookiecutter.hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/datasette-{{ cookiecutter.hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/datasette-{{ cookiecutter.hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/datasette-{{ cookiecutter.hyphenated }}/actions"

[project.entry-points.datasette]
{{ cookiecutter.underscored }} = "datasette_{{ cookiecutter.underscored }}"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

{% set package_datas = [] -%}
{% if cookiecutter.include_static_directory %}{{ package_datas.append('"static/*"') or "" }}{% endif -%}
{% if cookiecutter.include_templates_directory %}{{ package_datas.append('"templates/*"') or "" }}{% endif -%}

[tool.setuptools.packages.find]
where = ["."]

{% if package_datas %}
[tool.setuptools.package-data]
datasette_{{ cookiecutter.underscored }} = [{{ ", ".join(package_datas) }}]
{% endif %}

[tool.pytest.ini_options]
asyncio_mode = "strict"